# radio_telemetry_tracker_drone_GCS

./: .eslintrc.js  .gitignore  LICENSE  README.md  main.py  package.json  pyproject.toml  tsconfig.json
.github/workflows/: eslint_lint.yml  pytest_tests.yml  release.yml  ruff_lint.yml  vitest_tests.yml
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  MainLayout.tsx  index.css
frontend/src/components/: CommsConfig.tsx  ControlPanel.tsx  DataLayers.tsx  FatalErrorModal.tsx  LoadingSpinner.tsx  Map.tsx
frontend/src/components/common/: Card.tsx  LoadingSpinner.tsx  Modal.tsx  Tooltip.tsx
frontend/src/components/comms/: AdvancedCommsSettings.tsx  CommsConfig.tsx
frontend/src/components/controlPanel/: ControlPanel.tsx  FrequencyLayersControl.tsx  FrequencyManager.tsx  POIForm.tsx  POIList.tsx
frontend/src/components/device/: DeviceControls.tsx  DroneStatus.tsx
frontend/src/components/fieldDevice/: DroneStatus.tsx  FieldDeviceControls.tsx
frontend/src/components/icons/: index.tsx
frontend/src/components/manager/: FrequencyLayersControl.tsx  FrequencyManager.tsx
frontend/src/components/map/: DataLayers.tsx  MapContainer.tsx  MapOverlayControls.tsx  ZoomControl.tsx  (+1 more)
frontend/src/context/: GlobalAppContext.tsx  globalAppContextDef.ts  globalAppTypes.ts
frontend/src/contexts/: CommsContext.tsx  CommsProvider.tsx  MapContext.tsx
frontend/src/hooks/: useConnectionQuality.ts  useGCSStateMachine.ts  useInternetStatus.ts  useSimulatorShortcut.ts
frontend/src/styles/: animations.css  base.css  components.css
frontend/src/types/: commsContext.ts  global.d.ts  mapContext.ts
frontend/src/utils/: backend.ts  logging.ts  mapSources.ts
frontend/tests/components/: MainLayout.test.tsx
gis-features/: .eslintignore  package-lock.json  package.json
gis-features/public/: index.html
gis-features/src/: App.js  Map.js  Sidebar.js
radio_telemetry_tracker_drone_gcs/: __init__.py  bridge.py  drone_data.py  main.py  tile_server.py  window.py
radio_telemetry_tracker_drone_gcs/comms/: __init__.py  communication_bridge.py  connection_handler.py  drone_comms_service.py  gps_handler.py  state_machine.py
radio_telemetry_tracker_drone_gcs/data/: __init__.py  drone_data_manager.py  models.py
radio_telemetry_tracker_drone_gcs/electron/: index.html  main.ts  renderer.ts
radio_telemetry_tracker_drone_gcs/services/: __init__.py  poi_db.py  poi_service.py  simulator_core.py  simulator_service.py  tile_db.py  tile_server.py  tile_service.py
radio_telemetry_tracker_drone_gcs/utils/: __init__.py  paths.py
rttDroneGCS/: config.py  rtt_drone_gcs.py
rttDroneGCS/gui/: __init__.py  dialogs.py  map.py  popups.py
rttDroneGCS/mav/: __init__.py  enums.py  mav_model.py
rttDroneGCS/ping/: __init__.py  data_manager.py  io_operations.py  location_estimator.py  models.py  utils.py
scripts/: __init__.py  build.py  copy-assets.js  dev.py  utils.py
static/css/: styles.css
static/js/: main.js
templates/: index.html
tests/: __init__.py
tests/comms/: __init__.py  test_communication_bridge.py  test_drone_comms_service.py  test_state_machine.py
tests/data/: __init__.py  test_drone_data_manager.py
tests/services/: __init__.py  test_poi_service.py  test_tile_service.py
(+32 files in other folders)
